prevent column overlap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,6 +5,6 @@ th, td {
     white-space: nowrap;
     text-align: center
 }
-.display {
+#main-content {
     font-size: 13px;
 }
